# DOBOT-CR5

./: .gitattributes  .gitignore  README.md
config/: lab.env  local.example.yaml
docs/: BOOK_SPRAY_LAPTOP_REMOTE_TEST.md  BRANCH_POLICY.md  CALIBRATION_TARGET.md  CODE_TRANSFER.md  CR5_D455_CURRENT_STARTUP_AND_VISION_DEBUG.md  DEV_TOOLKIT.md  GITHUB_SSH_UBUNTU_DEPLOY.md  NEXT_MULTI_CAMERA_CALIBRATION.md  REALSENSE_ROS1_2_3_2_LOCAL_DIFF_AUDIT.md  REALSENSE_ROS1_SETUP.md  REAL_MACHINE_TEST_GUIDE.md  REPOSITORY_CLEANUP_REPORT.md  SIMULATION_OPERATION.md  SOURCE_PROVENANCE.md  SYSTEM_ARCHITECTURE.md  THIRD_PARTY_NOTICES.md  三相机标定与三维重建.md  下一阶段_多相机标定.md  仿真操作手册.md  分支策略.md  (+5 more)
src/a4_spray_demo/: CMakeLists.txt  README.md  package.xml
src/a4_spray_demo/config/: a4_raster.yaml  small_test.yaml
src/a4_spray_demo/launch/: a4_raster_demo.launch  quick_check.launch
src/a4_spray_demo/scripts/: a4_raster_demo.py  quick_check.py
src/cr5_book_spray_demo/: CMakeLists.txt  README_CN.md  package.xml
src/cr5_book_spray_demo/config/: book_path.yaml  book_vision.yaml  safety.yaml
src/cr5_book_spray_demo/docs/: ARCHITECTURE_AND_SAFETY.md  LEGACY_CODE_REVIEW.md  TCP_AND_CALIBRATION.md  TEST_ACCEPTANCE.md  spray_tcp_template.xacro
src/cr5_book_spray_demo/launch/: book_demo.launch  d455_camera.launch  planner_only.launch  vision_only.launch
src/cr5_book_spray_demo/scripts/: book_demo_cli.sh  book_pose_estimator.py  book_spray_planner.py  find_legacy_calibration.sh  offline_book_detector_tuner.py  preflight_book_demo.sh
src/cr5_spray_perception/: CMakeLists.txt  README.md  package.xml  setup.py
src/cr5_spray_perception/include/cr5_spray_perception/: ceres_ba_optimizer.h
src/cr5_spray_perception/launch/: calibration_pipeline.launch
src/cr5_spray_perception/scripts/: bundle_adjustment.py  capture_manager.py  estimate_camera_extrinsics.py  evaluate_reconstruction.py  joint_capture_manager.py  reconstruct_tsdf.py  run_multi_frame_calibration.py  validate_calibration_visibility.py
src/cr5_spray_perception/src/: ceres_ba_optimizer.cpp
src/cr5_spray_perception/src/cr5_spray_perception/: __init__.py  aruco_compat.py
src/cr5_spray_planning/: CMakeLists.txt  package.xml
src/cr5_spray_planning/scripts/: spray_coverage_eval.py  spray_path_generator.py
src/cr5_spray_sim/: CMakeLists.txt  README.md  package.xml  setup.py
src/cr5_spray_sim/config/: calibration_target_v1.yaml  camera_layout_ideal.yaml  camera_layout_realistic.yaml  cr5_gazebo_controllers.yaml  cr5_initial_pose_v332.yaml  cr5_spray_v333.rviz  moveit_gazebo_controllers.yaml  scene.yaml  scene_v2.yaml  scene_v3.yaml  scene_v31.yaml  simulation_scene.yaml  spray_sim_v33.yaml  spray_tool_mount_v33.yaml
src/cr5_spray_sim/config/calibration/: calibration_target.yaml
src/cr5_spray_sim/launch/: cr5_only_gazebo.launch  full_scene.launch  moveit_gazebo.launch  scene_v2.launch  scene_v3.launch  scene_v31_simple.launch  scene_v33_spray.launch  spray_simulation.launch
src/cr5_spray_sim/materials/scripts/: cr5_calibration_target.material
src/cr5_spray_sim/media/materials/scripts/: cr5_calibration_target.material
src/cr5_spray_sim/meshes/workpieces/: automotive_fender_panel_collision.stl  automotive_fender_panel_metadata.yaml  automotive_fender_panel_visual.stl  bumper_corner_panel_collision.stl  bumper_corner_panel_metadata.yaml  bumper_corner_panel_visual.stl  cabinet_door_panel_collision.stl  cabinet_door_panel_metadata.yaml  cabinet_door_panel_visual.stl  geometry_debug_part_collision.stl  geometry_debug_part_metadata.yaml  geometry_debug_part_visual.stl
src/cr5_spray_sim/models/calibration_target/: README.md  calibration_target.yaml  model.config  model.sdf
src/cr5_spray_sim/models/calibration_target/materials/scripts/: calibration_target.material
src/cr5_spray_sim/models/calibration_target/meshes/: panel_unit.dae
src/cr5_spray_sim/models/calibration_target_v1/: model.config  model.sdf
src/cr5_spray_sim/models/calibration_target_v1/materials/scripts/: calibration_target_v1.material
src/cr5_spray_sim/scripts/: aruco_compat.py  audit_sim_processes.py  audit_sim_processes_v337.py  bootstrap_controllers.py  bootstrap_controllers_v337.py  calibrate_three_fixed_cameras.py  camera_geometry.py  capture_scene_snapshot.py  capture_scene_snapshot_v335.py  check_camera_streams_v333.py  check_clock_v336.py  check_controllers_loaded_v335.py  check_cr5_runtime_ready_v333.py  check_model_poses_v336.py  check_runtime_signals.py  check_runtime_signals_v336.py  check_runtime_signals_v337.py  check_scene_geometry.py  check_scene_geometry_v337.py  check_scene_runtime.py  check_scene_runtime_v337.py  check_scene_v331.py  check_scene_v332.py  check_sim_clock.py  check_tf_once_v331.py  compute_look_at.py  control_object_yaw.py  cr5_gravity_guard_v334.py  diagnose_calibration_visibility.py  estimate_camera_extrinsics.py  execution_safety_check.py  gazebo_spray_visual_v333.py  generate_spray_workpieces.py  hold_cr5_zero_v334.py  hold_robot_zero.py  initialize_cr5_pose_v332.py  initialize_robot_pose.py  object_pose_tf_v2.py  object_pose_tf_v31.py  object_yaw_controller.py  (+42 more)
src/cr5_spray_sim/src/cr5_spray_sim/: __init__.py  aruco_compat.py  camera_geometry.py  runtime_contract.py
src/cr5_spray_sim/test/: test_sim_headless.sh
src/cr5_spray_sim/tests/: test_calibration_assets.py  test_camera_geometry.py  test_hanging_attachment_geometry.py  test_runtime_contract.py  test_scene_config.py
src/cr5_spray_sim/urdf/: camera_pedestal.xacro  cr5_sim.urdf.xacro  fixed_rgbd_camera.urdf.xacro  full_scene.xacro  gantry.xacro  gantry_standalone.urdf.xacro  gantry_v2.xacro  goalpost_frame.xacro  hanging_object.xacro  object_standalone.urdf.xacro  object_v2.xacro  rotary_hanger.xacro  simple_goalpost_frame_v31.xacro  simple_hanging_workpiece_v31.xacro  spray_gun_tool.xacro  spray_gun_v33.xacro  spray_gun_v331_visuals.xacro  u_cell_frame.xacro  workpiece_v3.xacro
src/cr5_spray_sim/urdf/objects/: calibration_target_v1.xacro
src/cr5_spray_sim/worlds/: calibration_texture_check.world  calibration_texture_smoke.world  cr5_industrial_spray_cell.world
(+119 files in other folders)
