<?xml version="1.0"?>
<package format="2">
  <name>a4_spray_demo</name>
  <version>0.2.0</version>
  <description>Reviewed ROS 1 MoveIt raster coverage demo for DOBOT CR5 and landscape A4 paper.</description>

  <maintainer email="user@example.com">CR5 Spray Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>tf</depend>
  <depend>dobot_bringup</depend>

  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
