<?xml version="1.0"?>
<package format="2">
  <name>cr5_spray_perception</name>
  <version>0.1.0</version>
  <description>CR5 spray painting: multi-camera RGB-D capture and 3D reconstruction</description>
  <maintainer email="guolichen007@gmail.com">guolichen007</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>message_filters</depend>
  <depend>rospkg</depend>

  <!-- Python deps via requirements.txt -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
  </export>
</package>
