<?xml version="1.0"?>
<package format="2">
  <name>cr5_spray_planning</name>
  <version>0.1.0</version>
  <description>CR5 spray painting: path generation from mesh and coverage evaluation</description>
  <maintainer email="guolichen007@gmail.com">guolichen007</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_commander</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export/>
</package>
